@@ -1,3 +1,9 @@
+2008-05-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c
+	(clearlooks_draw_button):
+	Fixes the right shadow.
+
 2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
